fix: clean CORS config, remove duplicate beans